--- a/control/InverseKinematics/math/Forward_kinematics/FK.ipynb
+++ b/control/InverseKinematics/math/Forward_kinematics/FK.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Matrix([[(-(-sin(theta1)*sin(theta2) + cos(theta1)*cos(theta2))*sin(theta3)*sin(theta4) + (-sin(theta1)*sin(theta2) + cos(theta1)*cos(theta2))*cos(theta3)*cos(theta4))*cos(theta5) + (-(-sin(theta1)*sin(theta2) + cos(theta1)*cos(theta2))*sin(theta3)*cos(theta4) - (-sin(theta1)*sin(theta2) + cos(theta1)*cos(theta2))*sin(theta4)*cos(theta3))*sin(theta5), -(-(-sin(theta1)*sin(theta2) + cos(theta1)*cos(theta2))*sin(theta3)*sin(theta4) + (-sin(theta1)*sin(theta2) + cos(theta1)*cos(theta2))*cos(theta3)*cos(theta4))*sin(theta5) + (-(-sin(theta1)*sin(theta2) + cos(theta1)*cos(theta2))*sin(theta3)*cos(theta4) - (-sin(theta1)*sin(theta2) + cos(theta1)*cos(theta2))*sin(theta4)*cos(theta3))*cos(theta5), sin(theta1)*cos(theta2) + sin(theta2)*cos(theta1), -0.28*(-sin(theta1)*sin(theta2) + cos(theta1)*cos(theta2))*sin(theta3)*sin(theta4) + 0.28*(-sin(theta1)*sin(theta2) + cos(theta1)*cos(theta2))*cos(theta3)*cos(theta4) + 0.25*(-sin(theta1)*sin(theta2) + cos(theta1)*cos(theta2))*cos(theta3) + 0.28*(-(-sin(theta1)*sin(theta2) + cos(theta1)*cos(theta2))*sin(theta3)*sin(theta4) + (-sin(theta1)*sin(theta2) + cos(theta1)*cos(theta2))*cos(theta3)*cos(theta4))*cos(theta5) + 0.28*(-(-sin(theta1)*sin(theta2) + cos(theta1)*cos(theta2))*sin(theta3)*cos(theta4) - (-sin(theta1)*sin(theta2) + cos(theta1)*cos(theta2))*sin(theta4)*cos(theta3))*sin(theta5) - 0.03*sin(theta1)*sin(theta2) + 0.03*cos(theta1)*cos(theta2)], [(-(sin(theta1)*cos(theta2) + sin(theta2)*cos(theta1))*sin(theta3)*sin(theta4) + (sin(theta1)*cos(theta2) + sin(theta2)*cos(theta1))*cos(theta3)*cos(theta4))*cos(theta5) + (-(sin(theta1)*cos(theta2) + sin(theta2)*cos(theta1))*sin(theta3)*cos(theta4) - (sin(theta1)*cos(theta2) + sin(theta2)*cos(theta1))*sin(theta4)*cos(theta3))*sin(theta5), -(-(sin(theta1)*cos(theta2) + sin(theta2)*cos(theta1))*sin(theta3)*sin(theta4) + (sin(theta1)*cos(theta2) + sin(theta2)*cos(theta1))*cos(theta3)*cos(theta4))*sin(theta5) + (-(sin(theta1)*cos(theta2) + sin(theta2)*cos(theta1))*sin(theta3)*cos(theta4) - (sin(theta1)*cos(theta2) + sin(theta2)*cos(theta1))*sin(theta4)*cos(theta3))*cos(theta5), sin(theta1)*sin(theta2) - cos(theta1)*cos(theta2), -0.28*(sin(theta1)*cos(theta2) + sin(theta2)*cos(theta1))*sin(theta3)*sin(theta4) + 0.28*(sin(theta1)*cos(theta2) + sin(theta2)*cos(theta1))*cos(theta3)*cos(theta4) + 0.25*(sin(theta1)*cos(theta2) + sin(theta2)*cos(theta1))*cos(theta3) + 0.28*(-(sin(theta1)*cos(theta2) + sin(theta2)*cos(theta1))*sin(theta3)*sin(theta4) + (sin(theta1)*cos(theta2) + sin(theta2)*cos(theta1))*cos(theta3)*cos(theta4))*cos(theta5) + 0.28*(-(sin(theta1)*cos(theta2) + sin(theta2)*cos(theta1))*sin(theta3)*cos(theta4) - (sin(theta1)*cos(theta2) + sin(theta2)*cos(theta1))*sin(theta4)*cos(theta3))*sin(theta5) + 0.03*sin(theta1)*cos(theta2) + 0.03*sin(theta2)*cos(theta1)], [(-sin(theta3)*sin(theta4) + cos(theta3)*cos(theta4))*sin(theta5) + (sin(theta3)*cos(theta4) + sin(theta4)*cos(theta3))*cos(theta5), (-sin(theta3)*sin(theta4) + cos(theta3)*cos(theta4))*cos(theta5) - (sin(theta3)*cos(theta4) + sin(theta4)*cos(theta3))*sin(theta5), 0, 0.28*(-sin(theta3)*sin(theta4) + cos(theta3)*cos(theta4))*sin(theta5) + 0.28*(sin(theta3)*cos(theta4) + sin(theta4)*cos(theta3))*cos(theta5) + 0.28*sin(theta3)*cos(theta4) + 0.25*sin(theta3) + 0.28*sin(theta4)*cos(theta3) + 0.05], [0, 0, 0, 1]])\n"
+      "Matrix([[((-(-sin(theta1)*sin(theta2)*cos(90) + cos(theta1)*cos(theta2))*sin(theta3) + (-sin(theta1)*cos(90)*cos(theta2) - sin(theta2)*cos(theta1))*cos(theta3))*sin(theta4) + ((-sin(theta1)*sin(theta2)*cos(90) + cos(theta1)*cos(theta2))*cos(theta3) + (-sin(theta1)*cos(90)*cos(theta2) - sin(theta2)*cos(theta1))*sin(theta3))*cos(theta4))*cos(theta5) + ((-(-sin(theta1)*sin(theta2)*cos(90) + cos(theta1)*cos(theta2))*sin(theta3) + (-sin(theta1)*cos(90)*cos(theta2) - sin(theta2)*cos(theta1))*cos(theta3))*cos(theta4) - ((-sin(theta1)*sin(theta2)*cos(90) + cos(theta1)*cos(theta2))*cos(theta3) + (-sin(theta1)*cos(90)*cos(theta2) - sin(theta2)*cos(theta1))*sin(theta3))*sin(theta4))*sin(theta5), -((-(-sin(theta1)*sin(theta2)*cos(90) + cos(theta1)*cos(theta2))*sin(theta3) + (-sin(theta1)*cos(90)*cos(theta2) - sin(theta2)*cos(theta1))*cos(theta3))*sin(theta4) + ((-sin(theta1)*sin(theta2)*cos(90) + cos(theta1)*cos(theta2))*cos(theta3) + (-sin(theta1)*cos(90)*cos(theta2) - sin(theta2)*cos(theta1))*sin(theta3))*cos(theta4))*sin(theta5) + ((-(-sin(theta1)*sin(theta2)*cos(90) + cos(theta1)*cos(theta2))*sin(theta3) + (-sin(theta1)*cos(90)*cos(theta2) - sin(theta2)*cos(theta1))*cos(theta3))*cos(theta4) - ((-sin(theta1)*sin(theta2)*cos(90) + cos(theta1)*cos(theta2))*cos(theta3) + (-sin(theta1)*cos(90)*cos(theta2) - sin(theta2)*cos(theta1))*sin(theta3))*sin(theta4))*cos(theta5), sin(90)*sin(theta1), 0.1*((-(-sin(theta1)*sin(theta2)*cos(90) + cos(theta1)*cos(theta2))*sin(theta3) + (-sin(theta1)*cos(90)*cos(theta2) - sin(theta2)*cos(theta1))*cos(theta3))*sin(theta4) + ((-sin(theta1)*sin(theta2)*cos(90) + cos(theta1)*cos(theta2))*cos(theta3) + (-sin(theta1)*cos(90)*cos(theta2) - sin(theta2)*cos(theta1))*sin(theta3))*cos(theta4))*cos(theta5) + 0.1*((-(-sin(theta1)*sin(theta2)*cos(90) + cos(theta1)*cos(theta2))*sin(theta3) + (-sin(theta1)*cos(90)*cos(theta2) - sin(theta2)*cos(theta1))*cos(theta3))*cos(theta4) - ((-sin(theta1)*sin(theta2)*cos(90) + cos(theta1)*cos(theta2))*cos(theta3) + (-sin(theta1)*cos(90)*cos(theta2) - sin(theta2)*cos(theta1))*sin(theta3))*sin(theta4))*sin(theta5) + 0.3*(-(-sin(theta1)*sin(theta2)*cos(90) + cos(theta1)*cos(theta2))*sin(theta3) + (-sin(theta1)*cos(90)*cos(theta2) - sin(theta2)*cos(theta1))*cos(theta3))*sin(theta4) + 0.3*((-sin(theta1)*sin(theta2)*cos(90) + cos(theta1)*cos(theta2))*cos(theta3) + (-sin(theta1)*cos(90)*cos(theta2) - sin(theta2)*cos(theta1))*sin(theta3))*cos(theta4) + 0.3*(-sin(theta1)*sin(theta2)*cos(90) + cos(theta1)*cos(theta2))*cos(theta3) + 0.3*(-sin(theta1)*cos(90)*cos(theta2) - sin(theta2)*cos(theta1))*sin(theta3) - 0.3*sin(theta1)*sin(theta2)*cos(90) + 0.3*cos(theta1)*cos(theta2)], [(-((-sin(theta1)*sin(theta2) + cos(90)*cos(theta1)*cos(theta2))*sin(theta3) + (sin(theta1)*cos(theta2) + sin(theta2)*cos(90)*cos(theta1))*cos(theta3))*sin(theta4) + ((-sin(theta1)*sin(theta2) + cos(90)*cos(theta1)*cos(theta2))*cos(theta3) - (sin(theta1)*cos(theta2) + sin(theta2)*cos(90)*cos(theta1))*sin(theta3))*cos(theta4))*sin(theta5) + (((-sin(theta1)*sin(theta2) + cos(90)*cos(theta1)*cos(theta2))*sin(theta3) + (sin(theta1)*cos(theta2) + sin(theta2)*cos(90)*cos(theta1))*cos(theta3))*cos(theta4) + ((-sin(theta1)*sin(theta2) + cos(90)*cos(theta1)*cos(theta2))*cos(theta3) - (sin(theta1)*cos(theta2) + sin(theta2)*cos(90)*cos(theta1))*sin(theta3))*sin(theta4))*cos(theta5), (-((-sin(theta1)*sin(theta2) + cos(90)*cos(theta1)*cos(theta2))*sin(theta3) + (sin(theta1)*cos(theta2) + sin(theta2)*cos(90)*cos(theta1))*cos(theta3))*sin(theta4) + ((-sin(theta1)*sin(theta2) + cos(90)*cos(theta1)*cos(theta2))*cos(theta3) - (sin(theta1)*cos(theta2) + sin(theta2)*cos(90)*cos(theta1))*sin(theta3))*cos(theta4))*cos(theta5) - (((-sin(theta1)*sin(theta2) + cos(90)*cos(theta1)*cos(theta2))*sin(theta3) + (sin(theta1)*cos(theta2) + sin(theta2)*cos(90)*cos(theta1))*cos(theta3))*cos(theta4) + ((-sin(theta1)*sin(theta2) + cos(90)*cos(theta1)*cos(theta2))*cos(theta3) - (sin(theta1)*cos(theta2) + sin(theta2)*cos(90)*cos(theta1))*sin(theta3))*sin(theta4))*sin(theta5), -sin(90)*cos(theta1), 0.1*(-((-sin(theta1)*sin(theta2) + cos(90)*cos(theta1)*cos(theta2))*sin(theta3) + (sin(theta1)*cos(theta2) + sin(theta2)*cos(90)*cos(theta1))*cos(theta3))*sin(theta4) + ((-sin(theta1)*sin(theta2) + cos(90)*cos(theta1)*cos(theta2))*cos(theta3) - (sin(theta1)*cos(theta2) + sin(theta2)*cos(90)*cos(theta1))*sin(theta3))*cos(theta4))*sin(theta5) + 0.1*(((-sin(theta1)*sin(theta2) + cos(90)*cos(theta1)*cos(theta2))*sin(theta3) + (sin(theta1)*cos(theta2) + sin(theta2)*cos(90)*cos(theta1))*cos(theta3))*cos(theta4) + ((-sin(theta1)*sin(theta2) + cos(90)*cos(theta1)*cos(theta2))*cos(theta3) - (sin(theta1)*cos(theta2) + sin(theta2)*cos(90)*cos(theta1))*sin(theta3))*sin(theta4))*cos(theta5) + 0.3*((-sin(theta1)*sin(theta2) + cos(90)*cos(theta1)*cos(theta2))*sin(theta3) + (sin(theta1)*cos(theta2) + sin(theta2)*cos(90)*cos(theta1))*cos(theta3))*cos(theta4) + 0.3*((-sin(theta1)*sin(theta2) + cos(90)*cos(theta1)*cos(theta2))*cos(theta3) - (sin(theta1)*cos(theta2) + sin(theta2)*cos(90)*cos(theta1))*sin(theta3))*sin(theta4) + 0.3*(-sin(theta1)*sin(theta2) + cos(90)*cos(theta1)*cos(theta2))*sin(theta3) + 0.3*(sin(theta1)*cos(theta2) + sin(theta2)*cos(90)*cos(theta1))*cos(theta3) + 0.3*sin(theta1)*cos(theta2) + 0.3*sin(theta2)*cos(90)*cos(theta1)], [((-sin(90)*sin(theta2)*sin(theta3) + sin(90)*cos(theta2)*cos(theta3))*sin(theta4) + (sin(90)*sin(theta2)*cos(theta3) + sin(90)*sin(theta3)*cos(theta2))*cos(theta4))*cos(theta5) + ((-sin(90)*sin(theta2)*sin(theta3) + sin(90)*cos(theta2)*cos(theta3))*cos(theta4) - (sin(90)*sin(theta2)*cos(theta3) + sin(90)*sin(theta3)*cos(theta2))*sin(theta4))*sin(theta5), -((-sin(90)*sin(theta2)*sin(theta3) + sin(90)*cos(theta2)*cos(theta3))*sin(theta4) + (sin(90)*sin(theta2)*cos(theta3) + sin(90)*sin(theta3)*cos(theta2))*cos(theta4))*sin(theta5) + ((-sin(90)*sin(theta2)*sin(theta3) + sin(90)*cos(theta2)*cos(theta3))*cos(theta4) - (sin(90)*sin(theta2)*cos(theta3) + sin(90)*sin(theta3)*cos(theta2))*sin(theta4))*cos(theta5), cos(90), 0.1*((-sin(90)*sin(theta2)*sin(theta3) + sin(90)*cos(theta2)*cos(theta3))*sin(theta4) + (sin(90)*sin(theta2)*cos(theta3) + sin(90)*sin(theta3)*cos(theta2))*cos(theta4))*cos(theta5) + 0.1*((-sin(90)*sin(theta2)*sin(theta3) + sin(90)*cos(theta2)*cos(theta3))*cos(theta4) - (sin(90)*sin(theta2)*cos(theta3) + sin(90)*sin(theta3)*cos(theta2))*sin(theta4))*sin(theta5) + 0.3*(-sin(90)*sin(theta2)*sin(theta3) + sin(90)*cos(theta2)*cos(theta3))*sin(theta4) + 0.3*(sin(90)*sin(theta2)*cos(theta3) + sin(90)*sin(theta3)*cos(theta2))*cos(theta4) + 0.3*sin(90)*sin(theta2)*cos(theta3) + 0.3*sin(90)*sin(theta2) + 0.3*sin(90)*sin(theta3)*cos(theta2) + 0.1], [0, 0, 0, 1]])\n"
      ]
     }
    ],
@@ -20,15 +20,15 @@
     "theta1, theta2, theta3, theta4, theta5 = symbols(\"theta1 theta2 theta3 theta4 theta5\")\n",
     "\n",
     "# DH Parameters\n",
-    "d1, a1, alpha1 = 0.05, 0, 0  # Joint 1 rotates about z-axis\n",
-    "d2, a2, alpha2 = 0, 0.03, pi / 2  # Joint 2 shifts axis to y, hence 90-degree shift\n",
-    "d3, a3, alpha3 = 0, 0.25, 0  # Following joints rotate around y-axis, no alpha shift\n",
-    "d4, a4, alpha4 = 0, 0.28, 0\n",
+    "d1, a1, alpha1 = 0.1, 0, 90  # Joint 1 rotates about z-axis\n",
+    "d2, a2, alpha2 = 0, 0.3, 0  # Joint 2 shifts axis to y, hence 90-degree shift\n",
+    "d3, a3, alpha3 = 0, 0.3, 0  # Following joints rotate around y-axis, no alpha shift\n",
+    "d4, a4, alpha4 = 0, 0.3, 0\n",
     "d5, a5, alpha5 = (\n",
     "    0,\n",
-    "    0.28,\n",
+    "    0.1,\n",
     "    0,\n",
-    ")  # Note: This should be the link before the end, if any confusion clarify\n",
+    ")  \n",
     "\n",
     "\n",
     "# Define the transformation matrix using DH parameters\n",
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -76,16 +76,16 @@
      "output_type": "stream",
      "text": [
       "Position of the End Effector (x, y, z):\n",
-      "x = -0.334724318643355\n",
-      "y = 0.193253175473055\n",
-      "z = -0.597487113059643\n",
+      "x = -0.359807621135332\n",
+      "y = -0.356850380991494\n",
+      "z = -0.611988027250897\n",
       "\n",
       "Orientation Matrix of the End Effector:\n",
-      "Matrix([[0, -0.866025403784439, 0.500000000000000], [0, 0.500000000000000, 0.866025403784439], [-1.00000000000000, 0, 0]])\n",
+      "Matrix([[0.500000000000000, -0.866025403784439, 0], [-0.388043134333418, -0.224036808064585, 0.893996663600558], [-0.774223821576614, -0.446998331800279, -0.448073616129170]])\n",
       "\n",
       "\n",
       "Numerical Evaluation of the Transformation Matrix:\n",
-      "Matrix([[0, -0.866025403784439, 0.500000000000000, -0.334724318643355], [0, 0.500000000000000, 0.866025403784439, 0.193253175473055], [-1.00000000000000, 0, 0, -0.597487113059643], [0, 0, 0, 1.00000000000000]])\n"
+      "Matrix([[0.500000000000000, -0.866025403784439, 0, -0.359807621135332], [-0.388043134333418, -0.224036808064585, 0.893996663600558, -0.356850380991494], [-0.774223821576614, -0.446998331800279, -0.448073616129170, -0.611988027250897], [0, 0, 0, 1.00000000000000]])\n"
      ]
     }
    ],
@@ -93,7 +93,16 @@
     "\n",
     "################  Numerical Evaluation  ################\n",
     "\n",
-    "\n",
+    "# DH Parameters\n",
+    "d1, a1, alpha1 = 0.1, 0, 90  # Joint 1 rotates about z-axis\n",
+    "d2, a2, alpha2 = 0, 0.3, 0  # Joint 2 shifts axis to y, hence 90-degree shift\n",
+    "d3, a3, alpha3 = 0, 0.3, 0  # Following joints rotate around y-axis, no alpha shift\n",
+    "d4, a4, alpha4 = 0, 0.3, 0\n",
+    "d5, a5, alpha5 = (\n",
+    "    0,\n",
+    "    0.1,\n",
+    "    0,\n",
+    ")  \n",
     "# Compute individual transformation matrices with joint angles\n",
     "T1 = DH_matrix(-pi, d1, a1, alpha1)\n",
     "T2 = DH_matrix(-pi / 6, d2, a2, alpha2)\n",
@@ -126,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -150,11 +159,15 @@
     "theta1, theta2, theta3, theta4, theta5 = symbols(\"theta1 theta2 theta3 theta4 theta5\")\n",
     "\n",
     "# DH Parameters\n",
-    "d1, a1, alpha1 = 0.05, 0, 0\n",
-    "d2, a2, alpha2 = 0, 0.03, pi / 2\n",
-    "d3, a3, alpha3 = 0, 0.25, 0\n",
-    "d4, a4, alpha4 = 0, 0.28, 0\n",
-    "d5, a5, alpha5 = 0, 0.28, 0\n",
+    "d1, a1, alpha1 = 0.1, 0, 90  # Joint 1 rotates about z-axis\n",
+    "d2, a2, alpha2 = 0, 0.3, 0  # Joint 2 shifts axis to y, hence 90-degree shift\n",
+    "d3, a3, alpha3 = 0, 0.3, 0  # Following joints rotate around y-axis, no alpha shift\n",
+    "d4, a4, alpha4 = 0, 0.3, 0\n",
+    "d5, a5, alpha5 = (\n",
+    "    0,\n",
+    "    0.28,\n",
+    "    0,\n",
+    ")  # Note: This should be the link before the end, if any confusion clarify\n",
     "\n",
     "\n",
     "# Define the transformation matrix function using DH parameters\n",
