Refactor FK calculation code

--- a/control/InverseKinematics/math/inverse_kinematics/ik.ipynb
+++ b/control/InverseKinematics/math/inverse_kinematics/ik.ipynb
@@ -2,61 +2,72 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculated Joint Angles: (-1.373400766945016, nan, nan, 0.0, -0.0)\n"
+      "Solution for angles theta1 through theta5:\n",
+      "[   0.52362855  -23.85200759  -37.48042213  162.63436197 -100.52000044]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jafer\\AppData\\Local\\Temp\\ipykernel_28640\\1789298309.py:16: RuntimeWarning: invalid value encountered in arccos\n",
-      "  theta2 = np.arccos((a2**2 + c**2 - a3**2) / (2 * a2 * c))\n",
-      "C:\\Users\\jafer\\AppData\\Local\\Temp\\ipykernel_28640\\1789298309.py:17: RuntimeWarning: invalid value encountered in arccos\n",
-      "  theta3 = np.arccos((a2**2 + a3**2 - c**2) / (2 * a2 * a3))\n"
+      "e:\\anaconda\\Lib\\site-packages\\scipy\\optimize\\_minpack_py.py:177: RuntimeWarning: The iteration is not making good progress, as measured by the \n",
+      "  improvement from the last five Jacobian evaluations.\n",
+      "  warnings.warn(msg, RuntimeWarning)\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
+    "from scipy.optimize import fsolve\n",
     "\n",
-    "def calculate_joint_angles(x_d, y_d, z_d, R_d):\n",
-    "    # Define the link lengths and offsets as per your robot's configuration\n",
-    "    a1, a2, a3, a4, a5 = 0.03, 0.25, 0.28, 0.28, 0.15  # Link lengths\n",
-    "    d1 = 0.05  # Base offset\n",
-    "    \n",
-    "    # Calculate theta1\n",
-    "    theta1 = np.arctan2(y_d, x_d)\n",
-    "    \n",
-    "    # Calculate r and c\n",
-    "    r = np.sqrt(x_d**2 + y_d**2) - a1\n",
-    "    c = np.sqrt(r**2 + (z_d - d1)**2)\n",
-    "    \n",
-    "    # Calculate theta2 and theta3 using the cosine law\n",
-    "    theta2 = np.arccos((a2**2 + c**2 - a3**2) / (2 * a2 * c))\n",
-    "    theta3 = np.arccos((a2**2 + a3**2 - c**2) / (2 * a2 * a3))\n",
-    "    \n",
-    "    # Assuming identity matrices for joint rotations up to joint 3 for simplicity\n",
-    "    R3 = np.eye(3)  # This should actually be the result of the actual joint angles' rotation matrices\n",
-    "    R_rel = np.linalg.inv(R3) @ R_d  # Calculate relative rotation matrix\n",
-    "    \n",
-    "    # Calculate theta4 and theta5 based on the wrist orientation matrix\n",
-    "    theta4 = np.arctan2(R_rel[2, 1], R_rel[2, 2])\n",
-    "    theta5 = np.arctan2(-R_rel[2, 0], np.sqrt(R_rel[2, 1]**2 + R_rel[2, 2]**2))\n",
-    "    \n",
-    "    return theta1, theta2, theta3, theta4, theta5\n",
+    "# Define the system of equations\n",
+    "def equations(variables):\n",
+    "    theta1, theta2, theta3, theta4, theta5 = variables\n",
+    "    a2, a3, a4, d1 = 0.1, 0.3, 0.3, 0.3  # Example constants, adjust as necessary\n",
     "\n",
-    "# Example call\n",
-    "x_d, y_d, z_d = -1, -5, 0.2  # Desired position\n",
-    "R_d = np.eye(3)  # Identity matrix for simplicity\n",
-    "angles = calculate_joint_angles(x_d, y_d, z_d, R_d)\n",
-    "print(\"Calculated Joint Angles:\", angles)\n"
+    "    # Trigonometric functions for simplicity\n",
+    "    c1 = np.cos(theta1)\n",
+    "    s1 = np.sin(theta1)\n",
+    "    c2 = np.cos(theta2)\n",
+    "    s2 = np.sin(theta2)\n",
+    "    c3 = np.cos(theta3)\n",
+    "    s3 = np.sin(theta3)\n",
+    "    c23 = np.cos(theta2 + theta3)\n",
+    "    s23 = np.sin(theta2 + theta3)\n",
+    "    c4 = np.cos(theta4)\n",
+    "    s4 = np.sin(theta4)\n",
+    "    c5 = np.cos(theta5)\n",
+    "    s5 = np.sin(theta5)\n",
+    "\n",
+    "    # Equations from p5 and z5 vectors\n",
+    "    p5z = a2 * s2 + a3 * s2 * c3 + a3 * s3 * c2 + a4 * (c23 - s23) * s4 + a4 * (s23 + c23) * c4 + d1\n",
+    "    z5x = s1\n",
+    "    z5y = -c1\n",
+    "\n",
+    "    # Additional equations would be derived from other vector components\n",
+    "    # As an example, we'll solve for simple orientations\n",
+    "    return [\n",
+    "        p5z - 5,  # Example target value for p5z\n",
+    "        z5x - 0.5,  # Example value from sensor data for z5x\n",
+    "        z5y + 0.866,  # Example value from sensor data for z5y\n",
+    "        c1 + s1 - 1.366,  # Hypothetical extra condition to aid solving\n",
+    "        c2 * c3 - 0.5  # Hypothetical extra condition to aid solving\n",
+    "    ]\n",
+    "\n",
+    "# Initial guesses for theta1 through theta5\n",
+    "initial_guesses = [0, 0, 0, 0, 0]\n",
+    "\n",
+    "# Solve the system of equations\n",
+    "solutions = fsolve(equations, initial_guesses)\n",
+    "print(\"Solution for angles theta1 through theta5:\")\n",
+    "print(solutions)\n"
    ]
   }
  ],
