Refactor FK calculation code

--- a/control/InverseKinematics/math/Forward_kinematics/FK.ipynb
+++ b/control/InverseKinematics/math/Forward_kinematics/FK.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -291,13 +291,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "64107964346e439d9fb9593bf0960191",
+       "model_id": "719cadec68f440a58a3f9098c103602e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -311,7 +311,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aef45032093f448790c483141f2bcd49",
+       "model_id": "096afd8ff212473db2d1746ffd0b1102",
        "version_major": 2,
        "version_minor": 0
       },
@@ -406,6 +406,130 @@
     "})\n",
     "\n",
     "display(ui, out)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### New Robot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "229ee261398a4d5ab2afdd21281b0b42",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(FloatSlider(value=3.141592653589793, description='theta1_val', max=3.141592653589793, mi…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.plot_robot(theta1_val, theta2_val, theta3_val, theta4_val, theta5_val)>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "from sympy import symbols, cos, sin, pi, Matrix, N\n",
+    "from ipywidgets import interact, FloatSlider\n",
+    "\n",
+    "# Define symbolic variables\n",
+    "theta1, theta2, theta3, theta4, theta5 = symbols(\"theta1 theta2 theta3 theta4 theta5\")\n",
+    "\n",
+    "# DH Parameters\n",
+    "d1, a1, alpha1 = 0.1, 0, pi / 2\n",
+    "d2, a2, alpha2 = 0, 0.5, 0\n",
+    "d3, a3, alpha3 = 0, 0.5, 0\n",
+    "d4, a4, alpha4 = 0, 0, -pi / 2\n",
+    "d5, a5, alpha5 = 0.1, 0, 0\n",
+    "l6 = 0.2  # Length of the new link\n",
+    "\n",
+    "# Define the transformation matrix function using DH parameters\n",
+    "def DH_matrix(theta, d, a, alpha):\n",
+    "    return Matrix([\n",
+    "        [cos(theta), -sin(theta) * cos(alpha), sin(theta) * sin(alpha), a * cos(theta)],\n",
+    "        [sin(theta), cos(theta) * cos(alpha), -cos(theta) * sin(alpha), a * sin(theta)],\n",
+    "        [0, sin(alpha), cos(alpha), d],\n",
+    "        [0, 0, 0, 1]\n",
+    "    ])\n",
+    "\n",
+    "def plot_robot(theta1_val, theta2_val, theta3_val, theta4_val, theta5_val):\n",
+    "    angles = {theta1: theta1_val, theta2: theta2_val, theta3: theta3_val, theta4: theta4_val, theta5: theta5_val}\n",
+    "    \n",
+    "    # Compute transformation matrices\n",
+    "    T1 = DH_matrix(theta1, d1, a1, alpha1).subs(angles)\n",
+    "    T2 = DH_matrix(theta2, d2, a2, alpha2).subs(angles)\n",
+    "    T3 = DH_matrix(theta3, d3, a3, alpha3).subs(angles)\n",
+    "    T4 = DH_matrix(theta4, d4, a4, alpha4).subs(angles)\n",
+    "    T5 = DH_matrix(theta5, d5, a5, alpha5).subs(angles)\n",
+    "    T6 = Matrix([[1, 0, 0, l6], [0, 1, 0, 0], [0, 0, 1, 0], [0, 0, 0, 1]])\n",
+    "\n",
+    "    # Calculate cumulative transformations\n",
+    "    T01 = T1\n",
+    "    T02 = T01 * T2\n",
+    "    T03 = T02 * T3\n",
+    "    T04 = T03 * T4\n",
+    "    T05 = T04 * T5\n",
+    "    T06 = T05 * T6\n",
+    "\n",
+    "    # Extract positions\n",
+    "    positions = [Matrix([0, 0, 0, 1]), T01[:3, 3], T02[:3, 3], T03[:3, 3], T04[:3, 3], T05[:3, 3], T06[:3, 3]]\n",
+    "    positions = [N(p) for p in positions]  # Evaluate numerically\n",
+    "\n",
+    "    fig = plt.figure(figsize=(12, 6))\n",
+    "    ax1 = fig.add_subplot(121)\n",
+    "    ax2 = fig.add_subplot(122, projection='3d')\n",
+    "\n",
+    "    # 2D plot\n",
+    "    x_vals = [p[0] for p in positions]\n",
+    "    y_vals = [p[1] for p in positions]\n",
+    "    ax1.plot(x_vals, y_vals, \"bo-\")\n",
+    "    ax1.plot(x_vals[0], y_vals[0], \"go\")  # Base in green\n",
+    "    ax1.plot(x_vals[-1], y_vals[-1], \"mo\")  # Extended end in magenta\n",
+    "    ax1.set_title(\"2D View\")\n",
+    "    ax1.set_xlabel(\"X\")\n",
+    "    ax1.set_ylabel(\"Y\")\n",
+    "    ax1.legend([\"Path\", \"Base\", \"Extended End\"])\n",
+    "\n",
+    "    # 3D plot\n",
+    "    z_vals = [p[2] for p in positions]\n",
+    "    ax2.plot(x_vals, y_vals, z_vals, \"ro-\")\n",
+    "    ax2.plot(x_vals[0], y_vals[0], z_vals[0], \"go\")  # Base in green\n",
+    "    ax2.plot(x_vals[-1], y_vals[-1], z_vals[-1], \"mo\")  # Extended end in magenta\n",
+    "    ax2.set_title(\"3D View\")\n",
+    "    ax2.set_xlabel(\"X\")\n",
+    "    ax2.set_ylabel(\"Y\")\n",
+    "    ax2.set_zlabel(\"Z\")\n",
+    "    ax2.legend([\"Path\", \"Base\", \"Extended End\"])\n",
+    "    plt.show()\n",
+    "\n",
+    "# Sliders\n",
+    "theta1_slider = FloatSlider(min=-np.pi, max=np.pi, step=0.01, value=np.pi)\n",
+    "theta2_slider = FloatSlider(min=-np.pi/2, max=np.pi/2, step=0.01, value=0)\n",
+    "theta3_slider = FloatSlider(min=-np.pi/2, max=np.pi/2, step=0.01, value=-np.pi/2)\n",
+    "theta4_slider = FloatSlider(min=-np.pi/2, max=np.pi/2, step=0.01, value=np.pi/4)\n",
+    "theta5_slider = FloatSlider(min=-np.pi/2, max=np.pi/2, step=0.01, value=np.pi/6)\n",
+    "\n",
+    "interact(plot_robot, theta1_val=theta1_slider, theta2_val=theta2_slider, theta3_val=theta3_slider, theta4_val=theta4_slider, theta5_val=theta5_slider)\n"
    ]
   }
  ],
