--- a/control/InverseKinematics/math/inverse_kinematics/ik.ipynb
+++ b/control/InverseKinematics/math/inverse_kinematics/ik.ipynb
@@ -2,63 +2,222 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solution for angles theta1 through theta5:\n",
-      "[ 0.07307665 -0.3574194   1.23056011  0.101787    0.00778058]\n"
+      "p5:\n",
+      "⎡a₂⋅cos(θ₁)⋅cos(θ₂) - a₃⋅sin(θ₁)⋅sin(θ₂ + θ₃) + a₃⋅cos(θ₁)⋅cos(θ₂ + θ₃) + a₄⋅(\n",
+      "⎢                                                                             \n",
+      "⎢a₂⋅sin(θ₁)⋅cos(θ₂) - a₃⋅sin(θ₁)⋅sin(θ₂ + θ₃) + a₃⋅sin(θ₁)⋅cos(θ₂ + θ₃) - a₄⋅(\n",
+      "⎢                                                                             \n",
+      "⎣                      a₂⋅sin(θ₂) + a₃⋅sin(θ₂)⋅cos(θ₃) + a₃⋅sin(θ₃)⋅cos(θ₂) + \n",
+      "\n",
+      "-sin(θ₁)⋅sin(θ₂ + θ₃) + cos(θ₁)⋅cos(θ₂ + θ₃))⋅cos(θ₄) + a₄⋅(sin(θ₁)⋅sin(θ₂ + θ\n",
+      "                                                                              \n",
+      "sin(θ₁)⋅sin(θ₂ + θ₃) - cos(θ₁)⋅cos(θ₂ + θ₃))⋅sin(θ₄) + a₄⋅(sin(θ₁)⋅cos(θ₂ + θ₃\n",
+      "                                                                              \n",
+      "a₄⋅(-sin(θ₂ + θ₃) + cos(θ₂ + θ₃))⋅sin(θ₄) + a₄⋅(sin(θ₂ + θ₃) + cos(θ₂ + θ₃))⋅c\n",
+      "\n",
+      "₃) + cos(θ₁)⋅cos(θ₂ + θ₃))⋅sin(θ₄)⎤\n",
+      "                                  ⎥\n",
+      ") + sin(θ₂ + θ₃)⋅cos(θ₁))⋅cos(θ₄) ⎥\n",
+      "                                  ⎥\n",
+      "os(θ₄) + d₁                       ⎦\n",
+      "x5:\n",
+      "⎡(-sin(θ₁)⋅sin(θ₂ + θ₃) + cos(θ₁)⋅cos(θ₂ + θ₃))⋅sin(θ₄)⋅sin(θ₅) + (sin(θ₁)⋅cos\n",
+      "⎢                                                                             \n",
+      "⎢(sin(θ₁)⋅cos(θ₂ + θ₃) + sin(θ₂ + θ₃)⋅cos(θ₁))⋅sin(θ₄)⋅sin(θ₅) + (sin(θ₁)⋅sin(\n",
+      "⎢                                                                             \n",
+      "⎣               (-sin(θ₄)⋅sin(θ₂ + θ₃) + cos(θ₄)⋅cos(θ₂ + θ₃))⋅sin(θ₅) + (-sin\n",
+      "\n",
+      "(θ₄)⋅cos(θ₂ + θ₃) + sin(θ₂ + θ₃)⋅cos(θ₁)⋅cos(θ₄))⋅cos(θ₅)⎤\n",
+      "                                                         ⎥\n",
+      "θ₂ + θ₃)⋅cos(θ₄) - cos(θ₁)⋅cos(θ₄)⋅cos(θ₂ + θ₃))⋅cos(θ₅) ⎥\n",
+      "                                                         ⎥\n",
+      "(θ₂ + θ₃) + cos(θ₂ + θ₃))⋅sin(θ₄)⋅cos(θ₅)                ⎦\n",
+      "y5:\n",
+      "⎡(-sin(θ₁)⋅sin(θ₂ + θ₃) + cos(θ₁)⋅cos(θ₂ + θ₃))⋅sin(θ₄)⋅cos(θ₅) - (sin(θ₁)⋅cos\n",
+      "⎢                                                                             \n",
+      "⎢(sin(θ₁)⋅cos(θ₂ + θ₃) + sin(θ₂ + θ₃)⋅cos(θ₁))⋅sin(θ₄)⋅cos(θ₅) - (sin(θ₁)⋅sin(\n",
+      "⎢                                                                             \n",
+      "⎣                (-sin(θ₄)⋅sin(θ₂ + θ₃) + cos(θ₄)⋅cos(θ₂ + θ₃))⋅cos(θ₅) + (sin\n",
+      "\n",
+      "(θ₄)⋅cos(θ₂ + θ₃) + sin(θ₂ + θ₃)⋅cos(θ₁)⋅cos(θ₄))⋅sin(θ₅)⎤\n",
+      "                                                         ⎥\n",
+      "θ₂ + θ₃)⋅cos(θ₄) - cos(θ₁)⋅cos(θ₄)⋅cos(θ₂ + θ₃))⋅sin(θ₅) ⎥\n",
+      "                                                         ⎥\n",
+      "(θ₂ + θ₃) - cos(θ₂ + θ₃))⋅sin(θ₄)⋅sin(θ₅)                ⎦\n",
+      "z5:\n",
+      "⎡sin(θ₁) ⎤\n",
+      "⎢        ⎥\n",
+      "⎢-cos(θ₁)⎥\n",
+      "⎢        ⎥\n",
+      "⎣   0    ⎦\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "from scipy.optimize import fsolve\n",
+    "import sympy as sp\n",
     "\n",
-    "# Define the system of equations\n",
-    "def equations(variables):\n",
-    "    theta1, theta2, theta3, theta4, theta5 = variables\n",
-    "    a2, a3, a4, d1 = 0.1, 0.3, 0.3, 0.3  # Example constants, adjust as necessary\n",
+    "def define_symbolic_vectors():\n",
+    "    # Define symbols for angles and constants\n",
+    "    a2, a3, a4, d1 = sp.symbols('a2 a3 a4 d1')\n",
+    "    theta1, theta2, theta3, theta4, theta5 = sp.symbols('theta1 theta2 theta3 theta4 theta5')\n",
+    "    \n",
+    "    # Define trigonometric symbols\n",
+    "    c1, c2, c3, c4, c5 = sp.cos(theta1), sp.cos(theta2), sp.cos(theta3), sp.cos(theta4), sp.cos(theta5)\n",
+    "    s1, s2, s3, s4, s5 = sp.sin(theta1), sp.sin(theta2), sp.sin(theta3), sp.sin(theta4), sp.sin(theta5)\n",
+    "    c23 = sp.cos(theta2 + theta3)\n",
+    "    s23 = sp.sin(theta2 + theta3)\n",
     "\n",
-    "    # Trigonometric functions for simplicity\n",
-    "    c1 = np.cos(theta1)\n",
-    "    s1 = np.sin(theta1)\n",
-    "    c2 = np.cos(theta2)\n",
-    "    s2 = np.sin(theta2)\n",
-    "    c3 = np.cos(theta3)\n",
-    "    s3 = np.sin(theta3)\n",
-    "    c23 = np.cos(theta2 + theta3)\n",
-    "    s23 = np.sin(theta2 + theta3)\n",
-    "    c4 = np.cos(theta4)\n",
-    "    s4 = np.sin(theta4)\n",
-    "    c5 = np.cos(theta5)\n",
-    "    s5 = np.sin(theta5)\n",
-    "\n",
-    "    # Equations from p5 and z5 vectors\n",
+    "    # Define vectors\n",
+    "    p5x = a2 * c1 * c2 - a3 * s1 * s23 + a3 * c1 * c23 + a4 * (c1 * c23 - s1 * s23) * c4 + a4 * (s1 * s23 + c1 * c23) * s4\n",
+    "    p5y = a2 * s1 * c2 - a3 * s1 * s23 + a3 * s1 * c23 + a4 * (s1 * c23 + c1 * s23) * c4 - a4 * (s1 * s23 - c1 * c23) * s4\n",
     "    p5z = a2 * s2 + a3 * s2 * c3 + a3 * s3 * c2 + a4 * (c23 - s23) * s4 + a4 * (s23 + c23) * c4 + d1\n",
-    "    z5x = s1\n",
-    "    z5y = -c1\n",
     "\n",
-    "    # Additional equations would be derived from other vector components\n",
-    "    # As an example, we'll solve for simple orientations\n",
-    "    return [\n",
-    "        p5z - 5,  # Example target value for p5z\n",
-    "        z5x - 0.5,  # Example value from sensor data for z5x\n",
-    "        z5y + 0.866,  # Example value from sensor data for z5y\n",
-    "        c1 + s1 - 1.366,  # Hypothetical extra condition to aid solving\n",
-    "        c2 * c3 - 0.5  # Hypothetical extra condition to aid solving\n",
-    "    ]\n",
+    "    x5x = (c1 * c23 - s1 * s23) * s4 * s5 + (c1 * s23 * c4 + s1 * c23 * c4) * c5\n",
+    "    x5y = (s1 * c23 + c1 * s23) * s4 * s5 + (s1 * s23 * c4 - c1 * c23 * c4) * c5\n",
+    "    x5z = (c23 - s23) * s4 * c5 + (c23 * c4 - s23 * s4) * s5\n",
     "\n",
-    "# Initial guesses for theta1 through theta5\n",
-    "initial_guesses = [0, 0, 0, 0, 0]\n",
+    "    y5x = (c1 * c23 - s1 * s23) * s4 * c5 - (c1 * s23 * c4 + s1 * c23 * c4) * s5\n",
+    "    y5y = (s1 * c23 + c1 * s23) * s4 * c5 - (s1 * s23 * c4 - c1 * c23 * c4) * s5\n",
+    "    y5z = -(c23 - s23) * s4 * s5 + (c23 * c4 - s23 * s4) * c5\n",
     "\n",
-    "# Solve the system of equations\n",
-    "solutions = fsolve(equations, initial_guesses)\n",
-    "print(\"Solution for angles theta1 through theta5:\")\n",
-    "print(solutions)\n"
+    "    z5x = sp.sin(theta1)\n",
+    "    z5y = -sp.cos(theta1)\n",
+    "    z5z = 0\n",
+    "\n",
+    "    # Collect vectors into a dictionary\n",
+    "    vectors = {\n",
+    "        'p5': sp.Matrix([p5x, p5y, p5z]),\n",
+    "        'x5': sp.Matrix([x5x, x5y, x5z]),\n",
+    "        'y5': sp.Matrix([y5x, y5y, y5z]),\n",
+    "        'z5': sp.Matrix([z5x, z5y, z5z])\n",
+    "    }\n",
+    "\n",
+    "    return vectors\n",
+    "\n",
+    "vectors = define_symbolic_vectors()\n",
+    "for key, vector in vectors.items():\n",
+    "    print(f\"{key}:\")\n",
+    "    sp.pprint(vector, use_unicode=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sympy as sp\n",
+    "\n",
+    "# Define the symbols\n",
+    "theta1, theta2, theta3, theta4, theta5 = sp.symbols('theta1 theta2 theta3 theta4 theta5')\n",
+    "a2, a3, a4, d1 = sp.symbols('a2 a3 a4 d1')\n",
+    "\n",
+    "# Assume some values are known\n",
+    "a2_val = 1\n",
+    "a3_val = 1\n",
+    "a4_val = 1\n",
+    "d1_val = 1\n",
+    "\n",
+    "# Define trigonometric terms\n",
+    "c1 = sp.cos(theta1)\n",
+    "s1 = sp.sin(theta1)\n",
+    "c2 = sp.cos(theta2)\n",
+    "s2 = sp.sin(theta2)\n",
+    "c3 = sp.cos(theta3)\n",
+    "c4 = sp.cos(theta4)\n",
+    "s4 = sp.sin(theta4)\n",
+    "s3 = sp.sin(theta3)\n",
+    "c23 = sp.cos(theta2 + theta3)\n",
+    "s23 = sp.sin(theta2 + theta3)\n",
+    "\n",
+    "# Example vectors' target values (these would be your specific conditions)\n",
+    "p5_target = sp.Matrix([1, 1, 1])  # Example target vector for p5\n",
+    "\n",
+    "# Define the vector equations from previous definition\n",
+    "p5x = a2 * c1 * c2 - a3 * s1 * s23 + a3 * c1 * c23 + a4 * (c1 * c23 - s1 * s23) * c4 + a4 * (s1 * s23 + c1 * c23) * s4\n",
+    "p5y = a2 * s1 * c2 - a3 * s1 * s23 + a3 * s1 * c23 + a4 * (s1 * c23 + c1 * s23) * c4 - a4 * (s1 * s23 - c1 * c23) * s4\n",
+    "p5z = a2 * s2 + a3 * s2 * c3 + a3 * s3 * c2 + a4 * (c23 - s23) * s4 + a4 * (s23 + c23) * c4 + d1\n",
+    "\n",
+    "# Form the system of equations\n",
+    "equations = [\n",
+    "    p5x - p5_target[0],\n",
+    "    p5y - p5_target[1],\n",
+    "    p5z - p5_target[2]\n",
+    "]\n",
+    "\n",
+    "# Solve the equations (for simple scenarios)\n",
+    "solution = sp.solve(equations, (theta1, theta2, theta3), dict=True)\n",
+    "\n",
+    "print(solution)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solution:\n",
+      "[{theta2: pi}, {theta2: -I*log(-sqrt(I*(exp(I*theta4) + exp(I*(theta3 + theta4)) + 1 - I)*exp(-I*(theta3 + theta4))/(I*exp(I*theta3) - (1 - I)*exp(I*(theta3 + theta4)) + I)))}, {theta2: -I*log(I*(exp(I*theta4) + exp(I*(theta3 + theta4)) + 1 - I)*exp(-I*(theta3 + theta4))/(I*exp(I*theta3) - (1 - I)*exp(I*(theta3 + theta4)) + I))/2}, {theta2: -I*log(-exp(-I*theta3))}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sympy as sp\n",
+    "\n",
+    "# Define the symbols\n",
+    "theta2, theta3, theta4, theta5 = sp.symbols('theta2 theta3 theta4 theta5')\n",
+    "x, y = sp.symbols('x y')  # x and y coordinates, presumably the position of the end effector\n",
+    "\n",
+    "# Assumed known values\n",
+    "a2, a3, a4, d1 = 1, 1, 1, 1  # Adjust these constants as per your actual values\n",
+    "\n",
+    "# Calculate theta1 from x and y\n",
+    "theta1 = sp.atan2(y, x)\n",
+    "\n",
+    "# Trigonometric terms using calculated theta1\n",
+    "c1 = sp.cos(theta1)\n",
+    "s1 = sp.sin(theta1)\n",
+    "c2 = sp.cos(theta2)\n",
+    "s2 = sp.sin(theta2)\n",
+    "c3 = sp.cos(theta3)\n",
+    "s3 = sp.sin(theta3)\n",
+    "c23 = sp.cos(theta2 + theta3)\n",
+    "s23 = sp.sin(theta2 + theta3)\n",
+    "c4 = sp.cos(theta4)\n",
+    "s4 = sp.sin(theta4)\n",
+    "\n",
+    "# p5 vector's components as defined in previous messages\n",
+    "p5x = a2 * c1 * c2 - a3 * s1 * s23 + a3 * c1 * c23 + a4 * (c1 * c23 - s1 * s23) * c4 + a4 * (s1 * s23 + c1 * c23) * s4\n",
+    "p5y = a2 * s1 * c2 - a3 * s1 * s23 + a3 * s1 * c23 + a4 * (s1 * c23 + c1 * s23) * c4 - a4 * (s1 * s23 - c1 * c23) * s4\n",
+    "p5z = a2 * s2 + a3 * s2 * c3 + a3 * s3 * c2 + a4 * (c23 - s23) * s4 + a4 * (s23 + c23) * c4 + d1\n",
+    "\n",
+    "# Target values for the p5 vector\n",
+    "p5_target = sp.Matrix([1, 1, 1])\n",
+    "\n",
+    "# System of equations\n",
+    "equations = [\n",
+    "    p5x - p5_target[0],\n",
+    "    p5y - p5_target[1],\n",
+    "    p5z - p5_target[2]\n",
+    "]\n",
+    "\n",
+    "# Solve the equations for theta2, theta3, theta4, theta5\n",
+    "solution = sp.solve(equations, (theta2), dict=True)\n",
+    "\n",
+    "# Display the solution\n",
+    "print(\"Solution:\")\n",
+    "print(solution)\n"
    ]
   }
  ],
