chore: Refactor FK calculation code and update transformation matrix generation

--- a/control/InverseKinematics/math/Forward_kinematics/FK.ipynb
+++ b/control/InverseKinematics/math/Forward_kinematics/FK.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
     "a_2, a_3 = sp.symbols(\"a_2 a_3\")  # a_2 and a_3 for the lengths of the second and third links\n",
     "\n",
     "# Alpha values in degrees, with an updated value for alpha_4\n",
-    "alpha = [90, 0, 0, 90, 0]  # Update alpha_4 to -90 degrees\n",
+    "alpha = [90, 0, 0, 90, 0] \n",
     "\n",
     "# Helper function to create a transformation matrix from DH parameters\n",
     "def dh_matrix(theta, d, a, alpha):\n",
